<resources>
    <string name="app_name">لهاليبو يحيح</string>
    <string name="test_text">lorem ipsum dolor sit amet</string>
    <string name="hourly_forecast">Hourly Forecast</string>
    <string name="weekly_forecast">Weekly Forecast</string>
    <string name="degree">°</string>
    <string name="celsius_symbol">C</string>
    <string name="fahrenheit_symbol">F</string>
    <string name="wind">Wind</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="sun_rise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="s">S</string>
    <string name="w">W</string>
    <string name="n">N</string>
    <string name="e">E</string>
    <string name="wind_gust">Wind Gust</string>
    <string name="meter_sec">m/sec</string>
    <string name="clouds">Clouds</string>
    <string name="feels_like">Feels Like</string>
    <string name="percentage">%</string>
    <string name="visibility">Visibility</string>
    <string name="meter">meter</string>
    <string name="pressure_unit">hPa</string>
    <string name="high_and_low">H:%.2f° | L:%.2f°</string>
    <string name="search_for_location">Search For Location</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="alarms">Alarms</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="celcius_c">Celcius(°C)</string>
    <string name="kelvin_c">Kelvin(°C)</string>
    <string name="fahrenheit_f">Fahrenheit(°F)</string>
    <string name="meter_p_second">meter/second</string>
    <string name="miles_hour">miles/hour</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="language">Language</string>
    <string name="location">Location</string>
    <string name="notfication_only">Notfication Only</string>
    <string name="confirm">Confirm</string>
</resources>