<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".features.settings.SettingsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:padding="10dp"
        android:text="App Notification"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/group4"
        app:layout_constraintTop_toBottomOf="@id/languageRadioGroup" />

    <RadioGroup
        android:id="@+id/locationRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/dropdown_background"
        app:layout_constraintEnd_toEndOf="@+id/group5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/group5"
        app:layout_constraintTop_toTopOf="@+id/group5">

        <RadioButton
            android:id="@+id/gpsRB"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:button="@null"
            android:drawableEnd="@android:drawable/radiobutton_off_background"
            android:drawableTint="@color/cloudy_background_color"
            android:text="@string/gps"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/mapRb"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:button="@null"
            android:drawableEnd="@android:drawable/radiobutton_off_background"
            android:text="@string/map"
            android:textColor="@color/white" />

    </RadioGroup>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button_background"
        app:constraint_referenced_ids="locationTxt2,locationBtn,textView18"
        app:layout_constraintBottom_toBottomOf="@+id/textView18"
        app:layout_constraintEnd_toEndOf="@+id/locationBtn"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toTopOf="@+id/textView18" />

    <RadioGroup
        android:id="@+id/languageRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/dropdown_background"
        app:layout_constraintEnd_toEndOf="@+id/group4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/group4"
        app:layout_constraintTop_toTopOf="@+id/group4">

        <RadioButton
            android:id="@+id/englishRB"
            android:layout_height="match_parent"
            android:layout_width="250dp"
            android:layout_gravity="center_horizontal"
            android:button="@null"
            android:drawableEnd="@android:drawable/radiobutton_off_background"
            android:drawableTint="@color/cloudy_background_color"
            android:text="@string/english"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/arabicRB"
            android:layout_height="wrap_content"
            android:layout_width="250dp"
            android:layout_gravity="center_horizontal"
            android:button="@null"
            android:drawableEnd="@android:drawable/radiobutton_off_background"
            android:text="@string/arabic"
            android:textColor="@color/white" />

    </RadioGroup>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button_background"
        app:constraint_referenced_ids="textView16,languageTxt,languageBtn"
        app:layout_constraintBottom_toBottomOf="@+id/textView16"
        app:layout_constraintEnd_toEndOf="@+id/languageBtn"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toTopOf="@+id/textView16" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button_background"
        app:constraint_referenced_ids="textView14,windSpeedTxt,winSpeedBtn"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="@+id/winSpeedBtn"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="@+id/textView14" />

    <RadioGroup
        android:id="@+id/tempRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/dropdown_background"
        app:layout_constraintEnd_toEndOf="@+id/group2"
        app:layout_constraintStart_toStartOf="@+id/group2"
        app:layout_constraintTop_toTopOf="@+id/group2">

        <RadioButton
            android:id="@+id/celciusRB"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:button="@null"
            android:drawableEnd="@android:drawable/radiobutton_off_background"
            android:drawableTint="@color/cloudy_background_color"
            android:text="@string/celcius_c"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/kelvinRB"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:button="@null"
            android:drawableEnd="@android:drawable/radiobutton_off_background"
            android:text="@string/kelvin_c"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/fhRB"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:button="@null"
            android:drawableEnd="@android:drawable/radiobutton_off_background"
            android:text="@string/fahrenheit_f"
            android:textColor="@color/white" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/winSpeedRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/dropdown_background"
        app:layout_constraintEnd_toEndOf="@+id/group3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/group3"
        app:layout_constraintTop_toTopOf="@+id/group3">

        <RadioButton
            android:id="@+id/meterPerSecondRB"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:button="@null"
            android:drawableEnd="@android:drawable/radiobutton_off_background"
            android:drawableTint="@color/cloudy_background_color"
            android:text="@string/meter_p_second"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/milesPerHourRB"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:button="@null"
            android:drawableEnd="@android:drawable/radiobutton_off_background"
            android:text="@string/miles_hour"
            android:textColor="@color/white" />

    </RadioGroup>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button_background"
        app:constraint_referenced_ids="textView5,tempTxt,tempBtn"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/tempBtn"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_weight="1"
        android:padding="10dp"
        android:text="@string/temperature_unit"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/tempTxt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationRadioGroup" />

    <TextView
        android:id="@+id/tempTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_weight="1"
        tools:text="Celcius(°C)"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/tempBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <ImageView
        android:id="@+id/tempBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="50dp"
        android:layout_weight="1"
        android:importantForAccessibility="no"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:src="@drawable/baseline_keyboard_arrow_right_24"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tempTxt"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:padding="10dp"
        android:text="@string/wind_speed"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/group2"
        app:layout_constraintTop_toBottomOf="@+id/tempRadioGroup" />

    <TextView
        android:id="@+id/windSpeedTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintEnd_toStartOf="@+id/winSpeedBtn"
        app:layout_constraintTop_toTopOf="@+id/textView14"
        tools:text="meter/second" />

    <ImageView
        android:id="@+id/winSpeedBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:importantForAccessibility="no"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:src="@drawable/baseline_keyboard_arrow_right_24"
        app:layout_constraintBottom_toBottomOf="@+id/windSpeedTxt"
        app:layout_constraintStart_toStartOf="@+id/tempBtn"
        app:layout_constraintTop_toTopOf="@+id/windSpeedTxt"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:padding="10dp"
        android:text="@string/language"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/group3"
        app:layout_constraintTop_toBottomOf="@+id/winSpeedRadioGroup" />

    <TextView
        android:id="@+id/languageTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView16"
        app:layout_constraintEnd_toStartOf="@+id/languageBtn"
        app:layout_constraintTop_toTopOf="@+id/textView16"
        tools:text="English" />

    <ImageView
        android:id="@+id/languageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:importantForAccessibility="no"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:src="@drawable/baseline_keyboard_arrow_right_24"
        app:layout_constraintBottom_toBottomOf="@+id/languageTxt"
        app:layout_constraintStart_toStartOf="@+id/winSpeedBtn"
        app:layout_constraintTop_toTopOf="@+id/languageTxt"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/locationTxt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView18"
        app:layout_constraintEnd_toStartOf="@+id/locationBtn"
        app:layout_constraintTop_toTopOf="@+id/textView18"
        tools:text="GPS" />

    <ImageView
        android:id="@+id/locationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:importantForAccessibility="no"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:src="@drawable/baseline_keyboard_arrow_right_24"
        app:layout_constraintBottom_toBottomOf="@+id/locationTxt2"
        app:layout_constraintEnd_toEndOf="@+id/group2"
        app:layout_constraintTop_toTopOf="@+id/locationTxt2"
        app:tint="@color/white"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:padding="10dp"
        android:text="@string/location"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/group2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/appNotificationBtn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/onfbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/group4"
        app:layout_constraintTop_toTopOf="@+id/textView21" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>